--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-08  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* keyboard.c: Declare Qdisabled_command_function instead of
+	Qdisabled_command_command.
+	(Fcommand_execute): Use Qdisabled_command_function instead of
+	Qdisabled_command_command.
+	(syms_of_keyboard): Ditto.
+
 2004-08-07  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* keymap.c (Flocal_key_binding, Fglobal_key_binding)
