--- a/etc/NEWS
+++ b/etc/NEWS
@@ -2189,7 +2189,7 @@ configuration files.
 
 +++
 ** Both the variable and the function `disabled-command-hook' have
-been renamed to `disabled-command-function',  The variable
+been renamed to `disabled-command-function'.  The variable
 `disabled-command-hook' has been kept as an obsolete alias.
 
 ** Function `compute-motion' now calculates the usable window
