--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,14 @@
+2004-08-08  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* subr.el (global-unset-key, local-unset-key): Doc fixes.
+
+	* novice.el (disabled-command-function): New variable renamed from
+	`disabled-command-hook'.
+	(disabled-command-hook): Keep the _variable_ as alias for
+	`disabled-command-function' and make obsolete.
+	(disabled-command-function): Function renamed from
+	`disabled-command-hook'.  Adapt code to name change of the variable.
+
 2004-08-07  Satyaki Das  <satyaki@theforce.stanford.edu>  (tiny change)
 
 	* simple.el (completion-root-regexp): New defvar.
