--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-08  John Paul Wallington  <jpw@gnu.org>
+
+	* ibuffer.el (define-ibuffer-column size): Use `string-to-number'
+	instead of `string-to-int'.
+	(define-ibuffer-column mode): Fix indentation.
+
 2004-08-08  Lars Hansen  <larsh@math.ku.dk>
 
 	* wid-edit.el (widget-sexp-validate): Allow whitespace after
