--- a/etc/NEWS
+++ b/etc/NEWS
@@ -3714,6 +3714,20 @@ running under X.
 ** Arguments for remove-overlays are now optional, so that you can remove
 all overlays in the buffer by just calling (remove-overlay).
 
+** New `function vector' type, including function currying
+The `function vector', or `funvec' type extends the old
+byte-compiled-function vector type to have other uses as well, and
+includes existing byte-compiled functions as a special case.  The kind
+of funvec is determined by the first element: a list is a byte-compiled
+function, and a non-nil atom is one of the new extended uses, currently
+`curry' for curried functions.  See the node `Funvec Type' in the Emacs
+Lisp Reference Manual for more information.
+
+*** New function curry allows constructing `curried functions'
+(see the node `Function Currying' in the Emacs Lisp Reference Manual).
+
+*** New functions funvec and funvecp allow primitive access to funvecs
+
 ** New packages:
 
 *** The new package gdb-ui.el provides an enhanced graphical interface to
