--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-09  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* help.el (describe-bindings): Doc fix.
+
+	* subr.el (kbd): Doc fix.
+
 2004-08-08  John Paul Wallington  <jpw@gnu.org>
 
 	* ibuffer.el (define-ibuffer-column size): Use `string-to-number'
