*** empty log message ***

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -38,6 +38,11 @@
 	(reb-lisp-syntax-p, reb-change-syntax): `rx' is a Lisp syntax.
 	(reb-cook-regexp): Call `rx-to-string' when `re-reb-syntax' is `rx'.
 
+2004-08-05  Katsumi Yamaoka  <yamaoka@jpl.org>  (tiny change)
+
+	* mail/mail-extr.el (mail-extr-disable-voodoo): New variable.
+	(mail-extr-voodoo): Check mail-extr-disable-voodoo.
+
 2004-08-04  Kenichi Handa  <handa@m17n.org>
 
 	* international/encoded-kb.el (encoded-kbd-setup-keymap): Fix
